# Furiri

./: Cargo.toml  LICENSE  README.md  bundler.toml
src/: editor.rs  lib.rs
src/editor/: adsr.rs  waveform.rs
