[package]
name = "furiri"
version = "0.1.0"
edition = "2021"
authors = ["Nora2605 <nora.ja2605@gmail.com>"]
license = "ISC"
homepage = "https://luemir.xyz/"
description = "waves if they were cool"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
